AgTenplate/force-app/main/default/objects/Crop_Disease__c/Crop_Disease__c.object-meta.xml
<CustomObject>
    <label>Crop Disease</label>
    <nameField>
        <label>Crop Disease Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crop Diseases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>