AgTenplate/force-app/main/default/objects/Crop_Disease__c/fields/Affected_Parts__c.field-meta.xml
<CustomField>
    <fullName>Affected_Parts__c</fullName>
    <label>Affected Parts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leaves</fullName>
            </value>
            <value>
                <fullName>Stems</fullName>
            </value>
            <value>
                <fullName>Roots</fullName>
            </value>
            <value>
                <fullName>Fruits</fullName>
            </value>
            <value>
                <fullName>Seeds</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>Entire Plant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>