AgTenplate/force-app/main/default/objects/Crop_Disease__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crop</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Crop Diseases</relationshipLabel>
    <relationshipName>Crop_Diseases</relationshipName>
    <type>Lookup</type>
</CustomField>