AgTenplate/force-app/main/default/objects/Crop_Disease__c/fields/Prevention_Methods__c.field-meta.xml
<CustomField>
    <fullName>Prevention_Methods__c</fullName>
    <label>Prevention Methods</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>