AgTenplate/force-app/main/default/objects/Crop_Disease__c/fields/Scientific_Name__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Name__c</fullName>
    <label>Scientific Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>