AgTenplate/force-app/main/default/objects/Crop_Disease__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>