AgTenplate/force-app/main/default/objects/Crop_Disease__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>