AgTenplate/force-app/main/default/objects/Crop_Disease__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Disease Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fungal</fullName>
            </value>
            <value>
                <fullName>Bacterial</fullName>
            </value>
            <value>
                <fullName>Viral</fullName>
            </value>
            <value>
                <fullName>Parasitic</fullName>
            </value>
            <value>
                <fullName>Nutritional</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>