AgTenplate/force-app/main/default/objects/Crop_Disease__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Crop__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>